--- a/package.json
+++ b/package.json
@@ -1,29 +1,45 @@
 {
   "name": "dropdown-component-library",
-  "version": "0.1.0",
-  "private": true,
+  "author": "Eva Afriana",
+  "version": "0.1.6",
+  "description": "React component to easily create customizable dropdown",
+  "license": "MIT",
+  "private": false,
+  "main": "dist/index.js",
+  "module": "dist/index.js",
+  "files": [
+    "dist",
+    "README.md"
+  ],
+  "keywords": [
+    "react",
+    "react-component",
+    "dropdown",
+    "react-dropdown",
+    "front-end"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/evafriana/dropdown-component-library"
+  },
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
+    "@babel/core": "^7.17.0",
+    "@babel/preset-react": "^7.16.7",
     "prop-types": "^15.8.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
-    "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "rm -rf dist && NODE_ENV=production babel src --out-dir dist --copy-files --ignore __tests__,spec.js,test.js,__snapshots__",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "devDependencies": {
+    "@babel/cli": "^7.17.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "5.0.0"
   },
   "browserslist": {
     "production": [
